--- a/settings.tex
+++ b/settings.tex
@@ -3,6 +3,6 @@
 \usepackage[ngerman]{babel}
 \usepackage[left = 2cm, right = 2cm, top = 2cm, bottom = 2cm]{geometry}
 \usepackage{graphicx}
-
+\usepackage{hyperref}
 \setlength{\parindent}{0cm}
 
