--- a/settings.tex
+++ b/settings.tex
@@ -3,4 +3,12 @@
 \usepackage{graphicx}
 \usepackage{hyperref}
 \setlength{\parindent}{0cm}
+\usepackage{setspace}
+\usepackage{titlesec}
 
+
+\usepackage{minted}
+\usepackage{xcolor}
+\definecolor{LightGray}{gray}{0.9} % background
+
+\titleformat*{\section}{\Huge\bfseries}
