--- a/settings.tex
+++ b/settings.tex
@@ -5,9 +5,15 @@
 \setlength{\parindent}{0cm}
 \usepackage{setspace}
 \usepackage{titlesec}
-
-
+\usepackage{listings}
+\usepackage{tocloft}
 \usepackage{minted}
+\usepackage{fancyhdr}
+
+\renewcommand{\listingscaption}{Auflistung}
+\renewcommand{\listoflistingscaption}{Quellcodeverzeichnis}
+
+
 \usepackage{xcolor}
 \definecolor{LightGray}{gray}{0.9} % background
 
